Configurando MongoDB properties

--- a/linguagens/src/main/resources/application.properties
+++ b/linguagens/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-
+spring.data.mongodb.uri=mongodb+srv://lh:KwKGlMZlPjmmBgig@cluster0.vytyv1y.mongodb.net/imersaoJavaDB
+spring.data.mongodb.database=imersaoJavaDB
