Adicionando variáveis de ambiente

--- a/linguagens/src/main/resources/application.properties
+++ b/linguagens/src/main/resources/application.properties
@@ -1,2 +1,4 @@
-spring.data.mongodb.uri=mongodb+srv://lh:KwKGlMZlPjmmBgig@cluster0.vytyv1y.mongodb.net/imersaoJavaDB
-spring.data.mongodb.database=imersaoJavaDB
+spring.data.mongodb.uri=mongodb+srv://\
+  ${MONGO_INITDB_ROOT_USERNAME}\
+  :${MONGO_INITDB_ROOT_PASSWORD}@${MONGO_CLUSTER}.mongodb.net/${MONGO_INITDB_DATABASE}
+spring.data.mongodb.database=${MONGO_INITDB_DATABASE}
