--- a/linguagens/src/main/resources/application.properties
+++ b/linguagens/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.data.mongodb.uri=mongodb+srv://\
   ${MONGO_INITDB_ROOT_USERNAME}\
-  :${MONGO_INITDB_ROOT_PASSWORD}@${MONGO_CLUSTER}.mongodb.net/${MONGO_INITDB_DATABASE}
+  :${MONGO_INITDB_ROOT_PASSWORD}\
+  @${MONGO_CLUSTER}.mongodb.net/${MONGO_INITDB_DATABASE}
 spring.data.mongodb.database=${MONGO_INITDB_DATABASE}
